# AndyClicker

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
andy_clicker/: Cargo.toml
andy_clicker/src/: main.rs
src/: lib.rs
src/engine/: app.rs  audio.rs  input.rs  mod.rs  state.rs
src/engine/assets/: manager.rs  mod.rs  progress.rs
src/engine/render/: invert_color.rs  mod.rs  point.rs  point.wgsl
src/state/: click.rs  menu.rs  mod.rs  mul_click.rs  select.rs
